--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
   "dependencies": {
     "react": "16.6.3",
     "react-native": "^0.57.8",
+    "react-native-elements": "^1.0.0-beta7",
     "react-native-gesture-handler": "^1.0.12",
     "react-native-tts": "^2.0.0",
+    "react-native-vector-icons": "^6.1.0",
     "react-navigation": "^3.0.9",
     "react-redux": "^6.0.0",
     "redux": "^4.0.1"
@@ -19,6 +21,7 @@
   "devDependencies": {
     "@types/jest": "^23.3.10",
     "@types/react-native": "^0.57.20",
+    "@types/react-native-vector-icons": "^4.6.4",
     "@types/react-navigation": "^3.0.1",
     "@types/react-redux": "^6.0.12",
     "@types/react-test-renderer": "^16.0.3",
