--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "tsc": "tsc"
   },
   "dependencies": {
+    "pino": "^5.12.0",
     "react": "16.6.3",
     "react-native": "^0.57.8",
     "react-native-ble-plx": "^1.0.1",
@@ -21,6 +22,7 @@
   },
   "devDependencies": {
     "@types/jest": "^23.3.10",
+    "@types/pino": "^5.8.6",
     "@types/react-native": "^0.57.20",
     "@types/react-native-vector-icons": "^4.6.4",
     "@types/react-navigation": "^3.0.1",
