--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "tsc": "tsc"
   },
   "dependencies": {
+    "@mapbox/react-native-mapbox-gl": "^6.1.3",
     "pino": "^5.12.0",
     "react": "16.6.3",
     "react-native": "^0.57.8",
