--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "@mapbox/mapbox-sdk": "^0.6.0",
     "@mapbox/react-native-mapbox-gl": "^6.1.3",
+    "@turf/distance": "^5.1.5",
     "pino": "^5.12.0",
     "react": "16.6.3",
     "react-native": "^0.57.8",
