--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@mapbox/mapbox-sdk": "^0.6.0",
     "@mapbox/react-native-mapbox-gl": "^6.1.3",
     "@turf/distance": "^5.1.5",
+    "numeral": "^2.0.6",
     "pino": "^5.12.0",
     "react": "16.6.3",
     "react-native": "^0.57.8",
@@ -26,6 +27,7 @@
   },
   "devDependencies": {
     "@types/jest": "^23.3.10",
+    "@types/numeral": "0.0.25",
     "@types/pino": "^5.8.6",
     "@types/react-native": "^0.57.20",
     "@types/react-native-vector-icons": "^4.6.4",
@@ -37,6 +39,7 @@
     "jest": "23.6.0",
     "metro-react-native-babel-preset": "0.51.1",
     "react-test-renderer": "16.6.3",
+    "redux-devtools-extension": "^2.13.8",
     "tslint": "^5.12.0",
     "tslint-config-airbnb": "^5.11.1",
     "typescript": "^3.2.2"
