Enable source maps for debugging

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,7 +12,9 @@
     "noEmit": true,
     "strict": true,
     "target": "esnext",
-    "resolveJsonModule": true
+    "resolveJsonModule": true,
+    "inlineSourceMap": true,
+    "sourceRoot": "src"
   },
   "exclude": ["node_modules"]
 }
