--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@mapbox/mapbox-sdk": "^0.6.0",
     "@mapbox/react-native-mapbox-gl": "^6.1.3",
     "@turf/distance": "^5.1.5",
+    "@turf/helpers": "^6.1.4",
     "numeral": "^2.0.6",
     "react": "16.6.3",
     "react-native": "^0.57.8",
