--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
   "dependencies": {
     "@mapbox/mapbox-sdk": "^0.6.0",
     "@mapbox/react-native-mapbox-gl": "^6.1.3",
+    "@turf/boolean-equal": "^6.0.1",
     "@turf/distance": "^5.1.5",
     "@turf/helpers": "^6.1.4",
+    "@turf/nearest-point-on-line": "^6.0.2",
     "numeral": "^2.0.6",
     "react": "16.6.3",
     "react-native": "^0.57.8",
