--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "@turf/boolean-equal": "^6.0.1",
     "@turf/distance": "^5.1.5",
     "@turf/helpers": "^6.1.4",
+    "@turf/invariant": "^6.1.2",
+    "@turf/line-slice": "^5.1.5",
     "@turf/nearest-point-on-line": "^6.0.2",
     "numeral": "^2.0.6",
     "react": "16.6.3",
