--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@turf/invariant": "^6.1.2",
     "@turf/line-slice": "^5.1.5",
     "@turf/nearest-point-on-line": "^6.0.2",
+    "lodash.isequal": "^4.5.0",
     "numeral": "^2.0.6",
     "react": "16.6.3",
     "react-native": "^0.57.8",
@@ -31,6 +32,7 @@
   },
   "devDependencies": {
     "@types/jest": "^23.3.10",
+    "@types/lodash.isequal": "^4.5.5",
     "@types/numeral": "0.0.25",
     "@types/react-native": "^0.57.20",
     "@types/react-native-vector-icons": "^4.6.4",
