--- a/package.json
+++ b/package.json
@@ -23,8 +23,9 @@
     "react-native-ble-plx": "^1.0.1",
     "react-native-elements": "^1.0.0-beta7",
     "react-native-gesture-handler": "^1.0.12",
+    "react-native-paper": "^2.15.2",
     "react-native-tts": "^2.0.0",
-    "react-native-vector-icons": "^6.1.0",
+    "react-native-vector-icons": "^6.4.2",
     "react-navigation": "^3.0.9",
     "react-redux": "^6.0.0",
     "redux": "^4.0.1",
