--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-native": "^0.57.8",
     "react-native-ble-plx": "^1.0.3",
     "react-native-gesture-handler": "^1.0.12",
+    "react-native-keyboard-aware-scroll-view": "^0.8.0",
     "react-native-paper": "^2.15.2",
     "react-native-tts": "^2.0.0",
     "react-native-vector-icons": "^6.4.2",
